# Guide_dog_Unitree_Go1

./: README.md  guide_dog.repos
guide_dog_unitree_go1/: CMakeLists.txt  package.xml
guide_dog_unitree_go1/config/: nav2_params_guide_dog.yaml
guide_dog_unitree_go1/launch/: guide_dog.launch.py  vision.launch.xml
guide_dog_unitree_go1/src/: guide_dog.cpp  vision_obstacles.cpp  voice_control.cpp
listen_talk_ros2/: LICENSE  README.md
listen_talk_ros2/listen_talk_ros2/: package.xml  setup.cfg  setup.py
listen_talk_ros2/listen_talk_ros2/config/: Dog-command_en_jetson_v2_1_0.rhn  Dog-command_en_linux_v2_1_0.rhn  Hey-Willie_en_jetson_v2_1_0.ppn  Hey-Willie_en_linux_v2_1_0.ppn
listen_talk_ros2/listen_talk_ros2/launch/: listen_talk.launch.py
listen_talk_ros2/listen_talk_ros2/listen_talk_ros2/: generate_audio_files.py  listen.py  talk.py
