<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>guide_dog_unitree_go1</name>
  <version>0.0.0</version>
  <description>Main guide dog package. Utilizes YOLOv7, Picovoice and Nav2 for autonomous navigation</description>
  <maintainer email="marthinusnel2023@u.northwestern.edu">Marno Nel</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>unitree_nav_interfaces</depend>
  <depend>unitree_ocr_interfaces</depend>

  <exec_depend>unitree_nav</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
